# jreit-analysis

./: .gitignore  README.md  app.py  cloud_store.py  config.yaml  invite_store.py  pyproject.toml  requirements.txt  update_data.py
.github/workflows/: update-data.yml
.streamlit/: secrets.toml.example
data/: overrides.json
src/jreit/: __init__.py  config.py  db.py  http.py  logging_conf.py  models.py  pipeline.py
src/jreit/scrapers/: dividends_pdf.py  edinet.py  ranking.py  reit_list.py
src/jreit/stock/: metrics.py  prices.py
tools/: make_icons.py
