[project]
name = "jreit-analysis"
version = "0.1.0"
description = "Production-grade J-REIT analysis system (cached-first)"
requires-python = ">=3.11"
dependencies = [
    # st.login() には Streamlit 1.42+ と Authlib + starlette + httpx が必要
    # Streamlit 内部で authlib.integrations.starlette_client.OAuth を import する
    "streamlit>=1.42",
    "Authlib>=1.3.2",
    "starlette>=0.37",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "loguru>=0.7",
    "tenacity>=8.3",
    "pyyaml>=6.0",
    "pyarrow>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jreit"]
